# mehmind

./: .gitignore  .pre-commit-config.yaml  CI_CD.md  COMMANDS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  ghost_run_demo_2025-08-23T23-26-37.html  ghost_run_demo_2025-08-23T23-26-37.json  ghost_run_demo_2025-08-23T23-27-22.html  ghost_run_demo_2025-08-23T23-27-22.json  policy.yaml  pyproject.toml  pytest.ini  setup.bat  setup.sh
.github/workflows/: dev-tests.yml  tests.yml
examples/: ghost_run_demo.py
examples/yc_demo/: README.md  demo.py
infra/docker/: Dockerfile.referee  otel-collector-config.yaml
referee/: app.py  budget.py  decider.py  holds.py  locks.py  otel.py  policy.py  store.py
referee/schemas/: __init__.py  budgets.py  effects.py  intents.py
scripts/: test-ci.sh
src/meshmind/: __init__.py  cli.py
src/meshmind/core/: __init__.py  budget.py  effects.py  intents.py
src/meshmind/ghost/: __init__.py  cli.py  decorators.py  reports.py  simulator.py
src/meshmind/langgraph/: __init__.py  decorators.py
src/meshmind/utils/: __init__.py  config.py  errors.py  keys.py  logging.py
tests/: __init__.py  test_ghost_reports.py  test_ghost_run.py
